#335 Fix ClassNewInstance warning in JsonTemplateLayout.